# coreutil

./: .gitignore  README.rst  mkdocs.yml  requirements.txt  setup.cfg  setup.py
docs/: algorithm.md  card.md  index.md
docs/stylesheets/: extra.css
src/coreutil/: __init__.py
src/coreutil/algorithm/: __init__.py  base.py
src/coreutil/card/: __init__.py  base.py  const.py
tests/: test_algorithm.py  test_card.py
