[metadata]
name = coreutil
version = attr: coreutil.__version__
project_urls =
    Source Code = https://github.com/joumaico/coreutil
license = MIT
license-file = LICENSE
author = Joumaico Maulas
author_email = joumaico@protonmail.com
maintainer = Joumaico Maulas
maintainer-email = joumaico@protonmail.com
description = A high-level extensive package of basic tools.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
requires-dist = setuptools

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where = src
